--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
-
 *{
   box-sizing: border-box;
   font-family: "dogicapixel"; 
@@ -263,6 +261,18 @@ opacity: 0;
   100%{transform:scale(1)}
 }
 
+.teclasAndar{
+  position: absolute;
+  top: 30%;
+left: 70%;
+
+pointer-events: none;
+
+text-align: center;
+color: aliceblue;
+float: right;
+opacity: 0;
+}
 
 
 .transicao{
@@ -291,7 +301,7 @@ opacity: 0;
 }
 @media (min-height: 700px) { /* Para telas maiores */
   .respira {
-    top: 72%;
+    top: 78%;
   }
 }
 
